# Project-ES

./: .gitignore  .project  Doxyfile  Eindassesment.md  KlassenDiagram.uxf  README.md  Sprint1.uxf  entree_uml.uxf  standaardfuncties.h
.github/: copilot-instructions.md
.github/workflows/: Static-Doxy.yml  agentic-doxygen-updater.yml  compile-socket.yml  deploy-doxygen.yml  test-socket.yml
CanBus/: .cproject  .mxproject  .project  CanBus.ioc
Code-Tests/Socket/: test_socket.sh
Design/: Systeem-Klassendiagram.mmd  Systeem-Sequencediagram.mmd
Design/KlassenDiagram/: Microcontroller comminucation.uxf  Sprint1.uxf  Sprint2.1.uxf  Sprint2.uxf  Sprint3.uxf
Design/drawio/: Entree_Schematisch.drawio  Entree_Verdeling.drawio  Entree_plattegrond.drawio
Documentatie/: README.md
Documentatie/CanBus/: ReadMe.md
Doxygen/: doxygen_crawl.html  graph_legend.html  index.html  md_README.html  pages.html
Doxygen/search/: all_1.js
Example Code/: README.md
Example Code/HC-SR04/: main.c
Example Code/LED Matrix/: 8 x 8 display  8x32display.ino  main.c
Example Code/Motion/: Motion.ino  main.c
Example Code/RFID/: README.md
Example Code/RGBLEDMatrix/: RGBLEDMatrix.ino  main.c
Example Code/Servo/: servo.ino
Example Code/Temprature sensor/: main.c
Kai/GekkeRFID/: .cproject  .project  GekkeRFID Debug.launch  GekkeRFID.ioc
Kai/KaiServoTesting/: .cproject  .project  KaiServoTesting Debug.launch  KaiServoTesting.ioc
Klassendiagrammen/: Sprint1.uxf  Sprint2.uxf  Sprint3.uxf
Lichtkrant/: Lichtkrant.ino
Max/: PINOUT.md  PlaceHolder.md
Max/Sprint1/: .project  Sprint1.ioc
MaxBlaauw/: error.txt
MaxBlaauw/RC522-STM32-L432KC/: .cproject  .project  RC522-STM32-L432KC.ioc  RC522-STM32-L432KC.launch  README.md
MaxBlaauw/WS2812B-STM32-L432KC/: .cproject  WS2812B-STM32-L432KC.ioc
MaxdeJong/: PINOUT Sprint 1.md  PINOUT Sprint 2.md  PINOUT.md  sprint 2.md
MicroController-1/: .cproject  .mxproject  .project  MicroController-1 Debug.launch  MicroController-1.ioc
MicroController-2/: .cproject  MicroController-2 Debug.launch  MicroController-2.ioc
MicroController-3/: .cproject  .project  MicroController-3.ioc
Microcontroller-4-external/: .cproject  .project  Microcontroller-4-external Debug.launch  Microcontroller-4-external.ioc
PI/Socket/: CMakeLists.txt  README_CPP.md  RPi_A.cpp  RPi_B.cpp  automations.h  pi_a.cpp  pi_b.cpp  test_poc.sh
PI/Socket/dispatch/: DeviceDispatcher.h  UnknownHandler.cpp  UnknownHandler.h  WmosHandler.cpp  WmosHandler.h
PI/Socket/protocol/: JsonMessage.cpp  JsonMessage.h
PI/Socket/service/: PiAService.cpp  PiAService.h  PiBService.cpp  PiBService.h
PI/Socket/transport/: HttpServer.cpp  HttpServer.h  SocketConnection.cpp
Socket/: Pi-1.c  Pi-1s.c  Pi-2.c  Pi-2c.c  Pi-2s.c  Pi-A.c  Pi-B.c  README_JSON.md  cJSON.c  socket.c
Socket_C/: README.md  cJSON.h
Socket_CPP/: CMakeLists.txt  RPi_A.cpp  RPi_B.cpp  design.txt  design.uxf  design_implementation.txt  example.cpp
Totale code/: Main.c
WMos-Wifi/: README.md  WMos-Wifi.ino  secrets.h.example
Wemos-Wifi/: README.md  WMos-Wifi.ino  Wemos-Wifi.ino  secrets.h.example
(+311 files in other folders)
